Make MiniPages work for big screens Make animations fluid Make touch targets better

--- a/client/src/components/buttons/FilledButton/FilledButton.module.scss
+++ b/client/src/components/buttons/FilledButton/FilledButton.module.scss
@@ -4,6 +4,7 @@
     border-radius: $button-border-radius;
     background-color: var(--primary-color);
     color: var(--on-primary-color);
+    font-size: $font-l;
 
     &.square {
         border-radius: $base-border-radius;
