Remove top app bar Add animate presence to tasks in home Add save function to MiniPageContainer Fix bug on mini page handler Add alert for not all required fields filled Add animation to tasks Add if for empty value on number textbox input

--- a/client/src/components/utilities/MiniPagesContainer/MiniPageContainer.module.scss
+++ b/client/src/components/utilities/MiniPagesContainer/MiniPageContainer.module.scss
@@ -13,11 +13,11 @@
 
 @media (min-width: $tablet-breakpoint) {
   .container {
-    width: 320px;
+    width: 360px;
     height: 100%;
     right: 0;
     top: 0;
-    box-sizing: content-box;
+    box-sizing: border-box;
   }
 }
 
@@ -53,6 +53,6 @@
 }
 
 .childrenContainer {
-  overflow-y: auto;
   padding-right: 10px;
+  overflow-y: visible;
 }
