Rename color global styles to be capitalized Remove background color for color picker Add new category as an input for category in new task Change padding on action buttons on minipage container Make new category into a miniPage

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -100,31 +100,31 @@ body {
     overflow-y: hidden;
 }
 
-.red {
+.Red {
     background-color: var(--red-color);
 }
 
-.orange {
+.Orange {
     background-color: var(--orange-color);
 }
 
-.yellow {
+.Yellow {
     background-color: var(--yellow-color);
 }
 
-.green {
+.Green {
     background-color: var(--green-color);
 }
 
-.lightBlue {
+.LightBlue {
     background-color: var(--light-blue-color);
 }
 
-.blue {
+.Blue {
     background-color: var(--blue-color);
 }
 
-.purple {
+.Purple {
     background-color: var(--purple-color);
 }
 
