--- a/client/src/components/utilities/MiniPagesContainer/MiniPageContainer.module.scss
+++ b/client/src/components/utilities/MiniPagesContainer/MiniPageContainer.module.scss
@@ -48,7 +48,7 @@
   display: flex;
   justify-content: space-between;
   font-size: $font-xl;
-  padding: 0 10px 10px 10px;
+  padding: 0 0 10px 0;
   background-color: var(--surface-color);
 }
 
