Make week day input component Add set tasks to tasksSlice Add react-day-picker dependency Add add category and remove category to category slice

--- a/client/src/components/buttons/IconButton/IconButton.module.scss
+++ b/client/src/components/buttons/IconButton/IconButton.module.scss
@@ -8,6 +8,8 @@
   justify-content: center;
   font-size: $font-l;
   color: var(--primary-color);
+  height: 1.5em;
+  width: 1.5em;
 
   &:hover {
     transform: scale(1.01);
@@ -23,4 +25,9 @@
   &.notSelected {
     opacity: $opacity-low;
   }
+}
+
+.border {
+  border: 1px solid var(--primary-color);
+  border-radius: 100%;
 }
