Change filled button name to button Add outlined type to button Make collapsible container component Add add group and remove group reducers to groupsSlice.js Add check for empty group in home js before rendering Customize date picker Add month and year day picker to new category Add title input to timegroup Add priority input to timegroup Change remove task reducer Change base gap style to 14px (from 10px) Fix WeekDayInput

--- a/client/src/components/buttons/Button/Button.module.scss
+++ b/client/src/components/buttons/Button/Button.module.scss
@@ -10,4 +10,10 @@
         border-radius: $base-border-radius;
         padding: 10px
     }
+
+    &.outlined {
+        border: 1px solid var(--primary-color);
+        background-color: var(--surface-color);
+        color: var(--on-surface-color);
+    }
 }
