Add types to chip component Remove debugging code Fix bug that doesn't allow collapsible container to extend Add more exceptions to handleGroupSave' Make groups editable and deletable Move Add icon to the start of flex box in new category

--- a/client/src/components/buttons/Chip/Chip.module.scss
+++ b/client/src/components/buttons/Chip/Chip.module.scss
@@ -15,4 +15,13 @@
     &:hover {
         filter: brightness(95%);
     }
+
+    &.round {
+        border-radius: $button-border-radius;
+    }
+
+    &.filled {
+        background-color: var(--primary-color);
+        color: var(--on-primary-color);
+    }
 }
