--- a/client/src/components/buttons/IconButton/IconButton.module.scss
+++ b/client/src/components/buttons/IconButton/IconButton.module.scss
@@ -1,7 +1,7 @@
 @import 'src/styles/variables.scss';
 
 .container {
-  transition: transform 0.2s, opacity 0.1s;
+  transition: transform 0.2s, opacity 0.1s, color 0.2s;
   display: inline-flex;
   flex-direction: column;
   align-items: center;
@@ -24,6 +24,18 @@
 
   &.notSelected {
     opacity: $opacity-low;
+  }
+
+  &.inverse {
+    color: var(--primary-color);
+  }
+
+  &.normal {
+    color: var(--on-primary-color);
+  }
+
+  &.green {
+    color: var(--green-color);
   }
 }
 
