--- a/client/src/components/inputs/DropDownInput/DropDownInput.module.scss
+++ b/client/src/components/inputs/DropDownInput/DropDownInput.module.scss
@@ -11,6 +11,7 @@
     box-sizing: border-box;
     height: 2.5em;
     box-shadow: none;
+    justify-content: space-between;
 
     &:hover {
         transform: scale(1.01);
