Move testing library to devDependencies Add size prop to Button Remove height from divider Add child class to Horizontal-Flex-Container for spacing Add Grid-Container class Add child class to Rounded-Container for shadow Split Minipage container children margin in half Change handling of new miniPages Make extended task view component

--- a/client/src/components/buttons/Button/Button.module.scss
+++ b/client/src/components/buttons/Button/Button.module.scss
@@ -16,4 +16,8 @@
         background-color: var(--surface-color);
         color: var(--on-surface-color);
     }
+
+    &.small {
+        font-size: $font-s;
+    }
 }
