Add task list screen Add task list to bottom bar Add task list to side bar Make custom hook for rendering tasks Add style to move content to the right for Horizontal Flex Container Move repeat properties of group to object to match task Add starting dates to new task Fix normal tasks now being checked for correct time Change name in package.json Style task component

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -62,6 +62,10 @@ body {
     &.Space-Between {
         justify-content: space-between;
     }
+
+    &.Align-Right {
+        justify-content: flex-end;
+    }
 }
 
 .Stack-Container {
