--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -43,7 +43,7 @@ $theme: 'light';
 
 // spacing
 $base-padding: 6px 12px;
-$symmetrical-padding: 10px 10px;
+$symmetrical-padding: 10px;
 $base-margin: 0.75rem;
 $big-gap: 20px;
 $base-gap: 10px;
