Add ability to add label to drop down container

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -123,6 +123,10 @@ body {
     overflow-y: hidden;
 }
 
+.Clickable {
+    cursor: pointer;
+}
+
 .Red {
     background-color: var(--red-color);
 }
