Make settings screen

--- a/client/src/components/utilities/InputWrapper/InputWrapper.module.scss
+++ b/client/src/components/utilities/InputWrapper/InputWrapper.module.scss
@@ -1,5 +1,9 @@
 @import 'src/styles/variables.scss';
 
+.container {
+  padding: $symmetrical-padding;
+}
+
 .inputContainer {
   justify-content: flex-start;
 }
