--- a/client/src/components/bars/BottomBar/BottomBar.module.scss
+++ b/client/src/components/bars/BottomBar/BottomBar.module.scss
@@ -7,6 +7,6 @@
   align-items: center;
   padding: $base-padding;
   justify-content: space-around;
-  border-top: 1px solid var(--border-color);
+  border-top: $base-border;
   z-index: 3;
 }
