Replace themeContext with user theme setting

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -21,10 +21,10 @@
     display: flex;
     flex-direction: row;
     gap: 0;
-    &.light {
+    &.Light {
         @include getTheme('light');
     }
-    &.dark {
+    &.Dark {
         @include getTheme('dark');
     }
 }
