Remove border on filled chip (fix render bug with firefox) Add email to settings

--- a/client/src/components/buttons/Chip/Chip.module.scss
+++ b/client/src/components/buttons/Chip/Chip.module.scss
@@ -23,5 +23,6 @@
     &.filled {
         background-color: var(--primary-color);
         color: var(--on-primary-color);
+        border: none;
     }
 }
