--- a/client/src/pages/TaskList/TaskList.module.scss
+++ b/client/src/pages/TaskList/TaskList.module.scss
@@ -1,3 +1,12 @@
+@import 'src/styles/variables.scss';
+
 .container {
   width: 100%;
+}
+
+@media (max-width: $tablet-breakpoint) {
+  .leftSide {
+    width: 100%;
+    padding-top: 1em;
+  }
 }
