--- a/client/src/components/indicators/Task/Task.module.scss
+++ b/client/src/components/indicators/Task/Task.module.scss
@@ -5,12 +5,12 @@
   position: relative;
   width: 22.15em;
 
-  &.small {
-    box-shadow: none;
-    border-radius: 0;
-    border-left: none;
-    border-right: none;
-  }
+  //&.small {
+  //  box-shadow: none;
+  //  border-radius: 0;
+  //  border-left: none;
+  //  border-right: none;
+  //}
 }
 
 .topLine {
