--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -23,12 +23,12 @@ $theme: 'light';
     } @else if $theme == 'dark' {
         $theme: 'dark';
 
-        --background-color: #1C1B1F;
-        --on-background-color: #E6E1E5;
-        --surface-color: #1C1B1F;
-        --on-surface-color: #E6E1E5;
-        --primary-color: #2E3440;
-        --on-primary-color: #E6E1E5;
+        --background-color: #202225;
+        --on-background-color: #fafafa;
+        --surface-color: #2f3136;
+        --on-surface-color: #fafafa;
+        --primary-color: #fafafa;
+        --on-primary-color: #1C1B1F;
         --error-color: #db3b21;
         --on-error-color: #ffffff;
         --warning-color: #fc9403;
