Create modal context Create change email modal Update Button to have props for animations Add big class to Button Fix Collapsible Container margins Fix input wrapper bug for one child Make pagination component Add some global classes

--- a/client/src/components/inputs/TextBoxInput/TextBoxInput.module.scss
+++ b/client/src/components/inputs/TextBoxInput/TextBoxInput.module.scss
@@ -7,6 +7,8 @@
     font-size: $font-m;
     box-sizing: border-box;
     box-shadow: none;
+    display: flex;
+    align-items: center;
 
     &:hover:enabled {
         transform: scale(1.01);
@@ -19,6 +21,14 @@
     &.max {
         width: 100%;
     }
+
+    &.big {
+        font-size: $font-xl;
+
+        & > * {
+            font-size: $font-xl;
+        }
+    }
 }
 
 .inputWrapper {
@@ -28,7 +38,7 @@
 }
 
 .input {
-    font-size: $font-m;
+    font-size: inherit;
     width: 100%;
 }
 
