--- a/client/src/components/utilities/CollapsibleContainer/CollapsibleContainer.module.scss
+++ b/client/src/components/utilities/CollapsibleContainer/CollapsibleContainer.module.scss
@@ -10,7 +10,8 @@
   gap: 0;
   overflow-x: hidden;
   & > * {
-    margin-bottom: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 
   &.noBorder {
