--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -70,6 +70,10 @@ body {
     &.Align-Right {
         justify-content: flex-end;
     }
+
+    &.Align-Center {
+        justify-content: center;
+    }
 }
 
 .Stack-Container {
@@ -80,6 +84,10 @@ body {
 
     &.BigGap {
         gap: $big-gap;
+    }
+
+    &.No-Gap {
+        gap: 0;
     }
 }
 
@@ -105,6 +113,11 @@ body {
 
 .Headline {
     font-size: $font-xl;
+}
+
+.Display {
+    font-size: $font-xxxl;
+    font-weight: bold;
 }
 
 .Rounded-Container {
