Add global styles for Overlay Add global styles for Surface Make new log in page Make reset password page Fix CollapsibleContainer.js styling Adjust pagination animations Fix bug with textbox height

--- a/client/src/components/inputs/TextBoxInput/TextBoxInput.module.scss
+++ b/client/src/components/inputs/TextBoxInput/TextBoxInput.module.scss
@@ -4,6 +4,7 @@
 .container {
     width: 10em;
     height: 2.5em;
+    min-height: 2.5em;
     font-size: $font-m;
     box-sizing: border-box;
     box-shadow: none;
