--- a/client/src/components/utilities/CollapsibleContainer/CollapsibleContainer.module.scss
+++ b/client/src/components/utilities/CollapsibleContainer/CollapsibleContainer.module.scss
@@ -1,7 +1,8 @@
 @import 'src/styles/variables.scss';
 
 .container {
-  margin: 0;
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
 }
 
 .childrenContainer {
