Add size prop to button Make overlay and surface responsive Add log in button to log in page

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -264,6 +264,12 @@ button {
             border-radius: 0;
         }
     }
+
+    .Surface {
+        height: 100%;
+        width: 100%;
+        padding: 40px;
+    }
 }
 
 @media (min-width: $tablet-breakpoint) {
