Add disabled prop to button Add invalid prop to textbox

--- a/client/src/components/buttons/Button/Button.module.scss
+++ b/client/src/components/buttons/Button/Button.module.scss
@@ -28,4 +28,9 @@
     &.max {
         width: 100%;
     }
+
+    &:disabled {
+        opacity: $opacity-low;
+        cursor: not-allowed;
+    }
 }
