--- a/client/src/components/inputs/TextBoxInput/TextBoxInput.module.scss
+++ b/client/src/components/inputs/TextBoxInput/TextBoxInput.module.scss
@@ -30,6 +30,14 @@
             font-size: $font-xl;
         }
     }
+
+    &.invalid {
+        border-color: var(--error-color);
+    }
+
+    &.valid {
+        border-color: var(--success-color);
+    }
 }
 
 .inputWrapper {
