Change SwitchContainer.js animation to be side to side

--- a/client/src/components/utilities/SwitchContainer/SwitchContainer.module.scss
+++ b/client/src/components/utilities/SwitchContainer/SwitchContainer.module.scss
@@ -3,3 +3,15 @@
     margin: 10px 0;
   }
 }
+
+.bigContainer {
+  display: grid;
+  grid-template: 1fr / 1 fr;
+  place-items: center;
+  overflow-x: hidden;
+
+  > * {
+    grid-column: 1 / 1;
+    grid-row: 1 / 1;
+  }
+}
