--- a/client/src/components/utilities/SwitchContainer/SwitchContainer.module.scss
+++ b/client/src/components/utilities/SwitchContainer/SwitchContainer.module.scss
@@ -1,4 +1,5 @@
 .container {
+  overflow-y: hidden;
   > * {
     margin: 10px 0;
   }
@@ -7,7 +8,6 @@
 .bigContainer {
   display: grid;
   grid-template: 1fr / 1 fr;
-  place-items: center;
   overflow-x: hidden;
 
   > * {
