Replace pagination component with SwitchContainer.js Update TextButton.js Delete Pagination.js Add 'Didn't receive code' button to reset password Add 'Didn't receive code' button to change email Add verification code for creating account

--- a/client/src/pages/LogInPage/LogInPage.module.scss
+++ b/client/src/pages/LogInPage/LogInPage.module.scss
@@ -8,3 +8,14 @@
     border: $base-border;
   }
 }
+
+.container {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+
+  & > * {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+}
