Change height of No tasks component Make global style for no tasks component Delete unused styles Fix some global styling

--- a/client/src/components/utilities/MiniPagesContainer/MiniPageContainer.module.scss
+++ b/client/src/components/utilities/MiniPagesContainer/MiniPageContainer.module.scss
@@ -25,6 +25,7 @@
 
 .container {
   position: fixed;
+  padding: 20px 20px;
   background-color: var(--surface-color);
   z-index: 3;
   flex-wrap: nowrap;
