--- a/client/src/components/indicators/Task/Task.module.scss
+++ b/client/src/components/indicators/Task/Task.module.scss
@@ -4,13 +4,7 @@
   display: inline-flex;
   position: relative;
   width: 22.15em;
-
-  //&.small {
-  //  box-shadow: none;
-  //  border-radius: 0;
-  //  border-left: none;
-  //  border-right: none;
-  //}
+  padding: $symmetrical-padding;
 }
 
 .topLine {
