--- a/client/src/components/indicators/CategoryIndicator/CategoryIndicator.module.scss
+++ b/client/src/components/indicators/CategoryIndicator/CategoryIndicator.module.scss
@@ -5,4 +5,11 @@
   padding: 5px 10px;
   font-size: $font-s;
   align-items: center;
+  max-width: 12.5em;
+}
+
+.text {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
