Restart work on back end Do local auth Add log in route Add log out route Add sign up route Add passport js dependency Add passport local dependency Add dotenv dependency Add express-session dependency

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -50,6 +50,10 @@ body {
     position: relative;
 }
 
+* {
+    transition: background-color 0.2s;
+}
+
 .Button {
     display: inline-flex;
     justify-content: center;
