Fix surface container styling Add is loading to useVerify Add error and success messages to useVerify Fix some global styling
Server:
Add proper error messages to verify email

--- a/client/src/components/utilities/SurfaceContainer/SurfaceContainer.module.scss
+++ b/client/src/components/utilities/SurfaceContainer/SurfaceContainer.module.scss
@@ -4,6 +4,15 @@
   .surface {
     border-radius: $base-border-radius;
     border: $base-border;
+    width: 600px;
+  }
+}
+
+@media (max-width: $tablet-breakpoint) {
+  .Surface {
+    height: 100%;
+    width: 100%;
+    padding: 40px;
   }
 }
 
