Client: Update how streak renders Add additional streak types Add streak types styling
Server:
Add additional streak types to task
Change taskhistory type to number
Add default value to mostRecentProperDate

--- a/client/src/components/indicators/Streak/Streak.module.scss
+++ b/client/src/components/indicators/Streak/Streak.module.scss
@@ -5,9 +5,17 @@
     width: 2.5em;
     border-radius: 0.5em;
 
-    background-color: var(--error-color);
+    background-color: var(--border-color);
+
+    &.some {
+        background-color: var(--orange-color);
+    }
+
+    &.close {
+        background-color: var(--yellow-color);
+    }
 
     &.complete {
-        background-color: var(--success-color);
+        background-color: var(--green-color);
     }
 }
