--- a/client/src/components/indicators/LoadingIndicator/LoadingIndicator.module.scss
+++ b/client/src/components/indicators/LoadingIndicator/LoadingIndicator.module.scss
@@ -1,14 +1,16 @@
 .container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: var(--surface-color);
+  width: calc(22.15em - 20px);
+  padding: 20px;
+  height: 2em;
   z-index: 4;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  &.fullSize {
+    height: 100%;
+    width: 100%;
+  }
 }
 
 @keyframes rotating {
