Start changing settings to react-query Move query client @index Fix newTask not loading Add reset account button (no func) Change cursor to point @checkbox Add set priorityBounds @addTask @getTasks Add 30 minute staletime to queries Make @useGetSettings Delete @useTask

--- a/client/src/pages/TaskView/Taskview.module.scss
+++ b/client/src/pages/TaskView/Taskview.module.scss
@@ -9,6 +9,7 @@ $base-size: 1.2em;
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 
   &.checked {
     background-color: var(--primary-color);
