Add isWarning and styling @Button

--- a/client/src/components/buttons/Button/Button.module.scss
+++ b/client/src/components/buttons/Button/Button.module.scss
@@ -33,4 +33,8 @@
         opacity: $opacity-low;
         cursor: not-allowed;
     }
+
+    &.isWarning {
+        color: var(--error-color);
+    }
 }
