--- a/client/src/pages/Settings/Settings.module.scss
+++ b/client/src/pages/Settings/Settings.module.scss
@@ -63,6 +63,11 @@
     display: flex;
     align-items: center;
     gap: 10px;
+    cursor: pointer;
+
+    &:hover {
+        text-decoration: underline;
+    }
 }
 
 .emailWrapper {
