Fix and optimize @categoryIndicator Make findStartingDates function Make directory for global functions Remove exitBeforeEnter @home animations Add initial false @home animations Fix LoadingIndicator styling Re add delete @taskView Make @useDeleteTask
Server:
Add some data @addTask response
Add some data @getTasksWithHistory return
Change category type -> string
Change timeGroup -> group
^2 @taskSchema

--- a/client/src/components/indicators/LoadingIndicator/LoadingIndicator.module.scss
+++ b/client/src/components/indicators/LoadingIndicator/LoadingIndicator.module.scss
@@ -1,6 +1,6 @@
 .container {
   width: calc(22.15em - 20px);
-  padding: 20px;
+  padding: 20px !important;
   height: 2em;
   z-index: 4;
   display: flex;
