Client: Remove unnecessary styling Add another styling for @LoadingIndicator For react-query: Rename get-categories => categories Same for tasks, settings, groups Make hook for changing entry value Make hook for getting current entry Make hook for getting all entries of task Completely redesign how entry values are handled
Server:
Rename taskHistory to entry
Add get one entry route
Update entrySchema to include date
Change return of @getTasksWithHistory currentEntryValue => currentEntryId

--- a/client/src/components/indicators/LoadingIndicator/LoadingIndicator.module.scss
+++ b/client/src/components/indicators/LoadingIndicator/LoadingIndicator.module.scss
@@ -7,9 +7,18 @@
   justify-content: center;
   align-items: center;
 
+
   &.fullSize {
     height: 100%;
     width: 100%;
+  }
+
+  &.inline {
+    height: auto;
+    width: auto;
+    border: none;
+    padding: 0 !important;
+    border-radius: 2em !important;
   }
 }
 
