Add deleting of category And pick deletion of tasks, entries Reorganise some files on the server Make useDeleteCategory Update login user test

--- a/client/src/components/utilities/InputWrapper/InputWrapper.module.scss
+++ b/client/src/components/utilities/InputWrapper/InputWrapper.module.scss
@@ -2,8 +2,12 @@
 
 .container {
   padding: $symmetrical-padding;
+  &:first-child {
+    white-space: pre-wrap;
+  }
 }
 
 .inputContainer {
+
   justify-content: flex-start;
 }
