Adjust task styling Add grouped tasks Fix categoryIndicator width Add uniqueness to category title Fix wrong selected group bug (same names)

--- a/client/src/components/indicators/Task/Task.module.scss
+++ b/client/src/components/indicators/Task/Task.module.scss
@@ -14,7 +14,7 @@
 }
 
 .titleContainer {
-  font-size: $font-l;
+  font-size: $font-xl;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
