--- a/client/src/pages/Settings/Settings.module.scss
+++ b/client/src/pages/Settings/Settings.module.scss
@@ -89,5 +89,10 @@
         width: 100%;
         height: auto;
         border: none !important;
+        padding-right: 0 !important;
+    }
+
+    .subContainer {
+        padding-right: 18px;
     }
 }
