Fix useGetSettings.js fetching when it shouldn't Change the ui of the settings page

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -125,6 +125,7 @@ body {
 
 .Title {
     font-size: $font-xxl;
+    font-weight: 500;
     //opacity: $opacity-low;
     //max-width: fit-content;
 }
