--- a/client/src/pages/Settings/Settings.module.scss
+++ b/client/src/pages/Settings/Settings.module.scss
@@ -5,11 +5,13 @@
     height: calc(100% - 4em);
     overflow: hidden;
     padding: $big-gap !important;
+    padding-right: 12px !important;
     position: relative;
 }
 
 .subContainer {
     overflow-y: auto;
+    padding-right: 20px;
 }
 
 .middleContainer {
@@ -91,8 +93,10 @@
         border: none !important;
         padding-right: 0 !important;
     }
+}
 
-    .subContainer {
-        padding-right: 18px;
-    }
+.subSection {
+    border: 1px solid var(--border-color);
+    border-radius: $base-border-radius;
+    padding: 20px;
 }
