Add modals for certain actions in settings Make modal component Add styling for links

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -54,6 +54,21 @@ body {
     transition: background-color 0.2s;
 }
 
+a {
+    &:link {
+        color: var(--on-surface-color);
+    }
+    &:visited {
+        color: var(--on-surface-color);
+    }
+    &:hover {
+        text-decoration: none;
+    }
+    &:active {
+        color: var(--on-surface-color);
+    }
+}
+
 .Button {
     display: inline-flex;
     justify-content: center;
