--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -44,6 +44,7 @@ $theme: 'light';
 // spacing
 $base-padding: 6px 12px;
 $symmetrical-padding: 10px;
+$big-padding: 40px 80px;
 $base-margin: 0.75rem;
 
 $base-gap: 10px;
