--- a/client/src/pages/Auth/ChangeEmail/ChangeEmail.module.scss
+++ b/client/src/pages/Auth/ChangeEmail/ChangeEmail.module.scss
@@ -1,4 +1,4 @@
-@import 'src/styles/variables.scss';
+@import '../../../styles/variables';
 
 @media (min-width: $tablet-breakpoint) {
 
@@ -14,7 +14,7 @@
   height: 100%;
   top: 0;
   left: 0;
-  background-color: var(--overlay-color);
+  background-color: var(--background-color);
   z-index: 3;
   position: fixed;
   display: flex;
