Rename functions in useVerify Start ChangeEmail.js Update to react 18 Update all packages to latest version Removed strict mode Add confirm tab to ResetPassword.js
Server:
Renamed verify to security
Move reset password routes to security
Make change email routes
Make template for change email email

--- a/client/src/pages/Auth/ChangeEmail/ChangeEmail.module.scss
+++ b/client/src/pages/Auth/ChangeEmail/ChangeEmail.module.scss
@@ -46,3 +46,15 @@
   display: flex;
   gap: $huge-gap;
 }
+
+.even {
+  width: 500px;
+  display: flex;
+  align-items: flex-start;
+}
+
+.odd {
+  width: 500px;
+  display: flex;
+  align-items: flex-end;
+}
